--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <img src="./img/blog1.jpg">
                 <h3>Coffee Bean Type</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis beatae illum labore quibusdam nesciunt veritatis deserunt doloremque neque amet, maxime quae. Non quod natus nesciunt nam doloremque quia, ratione quos.</p>
-                <a class="btn-black" href="#">Read more</a>
+                <a class="btn btn-black" href="#">Read more</a>
             </div>
 
             <div>
                 <img src="./img/blog2.jpg" alt="coffee cups">
                 <h3>3 Delicious Coffee Recipes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime facilis, illum ratione harum, quas quidem, qui placeat iure cupiditate vitae et officiis natus sed quaerat quo similique ducimus reprehenderit?</p>
-                <a class="btn-black" href="#">Read more</a>
+                <a class="btn btn-black" href="#">Read more</a>
             </div>
 
             <div>
