--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
-        <p>Coffee Blog with tips and Courses</p>
-        <p>Learn from the experts with the best recipes and tips</p>
+            <h2>Coffee Blog with tips and Courses</h2>
+            <p>Learn from the experts with the best recipes and tips</p>
     </header>  
 
     <main class="container main-flex">
@@ -60,5 +60,17 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <h2>Coffee Blog</h2>
+            <nav class="menu">
+            <a href="about.html">About</a>
+            <a href="courses.html">Courses</a>
+            <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </footer>
+
 </body>
 </html>
