--- a/coffee.html
+++ b/coffee.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Coffee Blog</title>
   <link rel="stylesheet" href="./mystyle.css">
 </head>
 <body>
