--- a/index.html
+++ b/index.html
@@ -2,17 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Skoo</title>
+  <title>Coffee Blog</title>
   <link rel="stylesheet" href="./mystyle.css">
 </head>
 <body>
+    
+    <header class="primary-header">
+        <div class="header-flex">
+            <h1>Coffee Blog</h1>
+            <nav class="menu">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="courses.html">Courses</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+        <h2>Coffee Blog with tips and Courses</h2>
+        <p>Learn from the experts with the best recipes and tips</p>
+    </header>  
 
     <main class="container main-flex">
-        <nav class="menu">
-            <a href="coffee.html">Coffee</a>
-            <a href="realestate.html">Real Estate</a>
-        </nav>
+        <section class="blog-container">
+            <h2>Our Blog</h2>
+            <div>
+                <img src="./img/blog1.jpg">
+                <h3>Coffee Bean Type</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis beatae illum labore quibusdam nesciunt veritatis deserunt doloremque neque amet, maxime quae. Non quod natus nesciunt nam doloremque quia, ratione quos.</p>
+                <a class="btn btn-black" href="#">Read more</a>
+            </div>
+            <div>
+                <img src="./img/blog2.jpg" alt="coffee cups">
+                <h3>3 Delicious Coffee Recipes</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita maxime facilis, illum ratione harum, quas quidem, qui placeat iure cupiditate vitae et officiis natus sed quaerat quo similique ducimus reprehenderit?</p>
+                <a class="btn btn-black" href="#">Read more</a>
+            </div>
+            <div>
+                <img src="./img/blog3.jpg" alt="coffee beans">
+                <h3>Coffee Benefits</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam labore eius optio necessitatibus vel suscipit sed magni cupiditate molestias. Minima commodi autem esse perferendis mollitia dolores fugiat asperiores totam id?<p>
+                <a class="btn btn-black" href="#">Read more</a>
+            </div>
+        </section>
+
+        <section class="courses-container">
+            <h2>Our courses and workshops</h2>
+            <div>
+                <h3>Coffee extraction techniques</h3>
+                <p>Price: Free</p>
+                <p>Seat: 20</p>
+                <a class="btn btn-brown" href="#">More information</a>
+            </div>
+            <div>
+                <h3>Coffee extraction techniques</h3>
+                <p>Price: Free</p>
+                <p>Seat: 20</p>
+                <a class="btn btn-brown" href="#">More information</a>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <h2>Coffee Blog</h2>
+            <nav class="menu">
+            <a href="about.html">About</a>
+            <a href="courses.html">Courses</a>
+            <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </footer>
 
 </body>
 </html>
