--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div class="header-flex">
             <h1>Coffee Blog</h1>
             <nav class="menu">
-                <a href="coffee.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="courses.html">Courses</a>
                 <a href="contact.html">Contact</a>
